# pythodds

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: tool_ideas.md
src/: __init__.py
src/utils/: __init__.py  bayes_theorem.py  binomial_distribution.py  birthday_problem.py  bootstrap_confidence_intervals.py  collatz_conjecture.py  expected_value.py  forecast_time_series.py  linear_regression.py  monte_carlo.py  normal_gaussian.py  pearson_correlation.py  poisson_distribution.py  prime_numbers.py  pythagorean_record.py  sample_size.py  spearman_correlation.py  streak_probability.py
tests/: __init__.py  test_bayes_theorem.py  test_binomial.py  test_birthday_problem.py  test_bootstrap_confidence_intervals.py  test_collatz_conjecture.py  test_expected_value.py  test_forecast_time_series.py  test_linear_regression.py  test_monte_carlo.py  test_normal_gaussian.py  test_pearson_correlation.py  test_poisson_distribution.py  test_prime_numbers.py  test_pythagorean_record.py  test_sample_size.py  test_spearman_correlation.py  test_streak_probability.py
