[project]
name = "pythodds"
version = "0.1.8"
description = "Command line utilities for statistics, odds, and probabilities"
readme = "README.md"
authors = [
    {name = "Nicholas Carsner", email = "nicholascarsner@gmail.com"},
]
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = []

keywords = ["statistics", "probability", "binomial", "odds", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.scripts]
binom = "utils.binomial_distribution:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
