[project]
name = "pythodds"
version = "0.10.0"
description = "Command line utilities for statistics, odds, and probabilities"
readme = "README.md"
authors = [
    {name = "Nicholas Carsner", email = "nicholascarsner@gmail.com"},
]
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

keywords = ["statistics", "probability", "binomial", "odds", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.scripts]
binom = "src.utils.binomial_distribution:main"
birthday = "src.utils.birthday_problem:main"
normal = "src.utils.normal_gaussian:main"
poisson = "src.utils.poisson_distribution:main"
expected = "src.utils.expected_value:main"
streak = "src.utils.streak_probability:main"
simulate = "src.utils.monte_carlo:main"
bayes = "src.utils.bayes_theorem:main"
pythag = "src.utils.pythagorean_record:main"
pearson = "src.utils.pearson_correlation:main"
sample = "src.utils.sample_size:main"
linreg = "src.utils.linear_regression:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--ignore=tests/_test_sales_tax_product.py --cov=src/utils --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
omit = [
    "src/__init__.py",
    "src/utils/__init__.py",
    "tests/__init__.py",
    "_*.py",
]

[tool.coverage.report]
exclude_also = [
    'if __name__ == "__main__"',
]
